test/scc/expr/semantic-errors/135.t
void test()
{
    struct { int x; } a = { .y = 10 };
}